Added missing asterisk

--- a/aip.tex
+++ b/aip.tex
@@ -2260,7 +2260,7 @@ To conclude our proof, it remains to show that the non-leading coefficients in $
 TO DO LIST:
 \begin{enumerate}
 \item[$\CheckedBox$] Make local to do list
-\item[$\Box$]  Describe an analog of \Cref{leftover p large: R}:  Explain how our proof demonstrates that $\mu(A,\vv{u},p^e) = \mu(\ol{A}, \ol{\vv{u}}, p^e)$ for every $p \gg 0$ and $e \geq 1$.  This follows from the fact that $\sprout_p^{\ast}(A,\vv{u}) = \sprout_p(\ol{A}, \ol{\vv{u}})$. 
+\item[$\Box$]  Describe an analog of \Cref{leftover p large: R}:  Explain how our proof demonstrates that $\mu(A,\vv{u},p^e) = \mu(\ol{A}, \ol{\vv{u}}, p^e)$ for every $p \gg 0$ and $e \geq 1$.  This follows from the fact that $\sprout_p^{\ast}(A,\vv{u}) = \sprout_p^{\ast}(\ol{A}, \ol{\vv{u}})$. 
 \item[$\Box$] Should we explain how the eventual periodicity of $\sprout_p^{\ast}(A,\vv{u})$ implies that $\crit(\ideala, \ideald)$ is always rational?  I can see that it might be better to state this with $\ideald$ replaced by an arbitrary ideal $\idealb$, but this will require us to have the contents of the appendix settled.
 \item[$\Box$] Should we explain why we have a deterministic algorithm for computing critical exponents, modulo algorithms for solving integer programs, or computing lattice points in polyhedra?
 \item[$\Box$]  It seems like if $A$ comes from a positively homogeneous $\idealm$-primary ideal, then most non-leading coefficients vanish, and it should be true that either $\crit(A,\vv{u}) = \ft{A}{\vv{u}}$ or $\crit(A,\vv{u})$ is rational with denominator a power of $p$.  Is this worth pointing out?
