--- a/aip.tex
+++ b/aip.tex
@@ -1989,7 +1989,7 @@ A vertex in the $p^e$-th component of the above disjoint union is said to be of 
 \label{elementary1: R}
 Consider a monomial matrix $A$.  In this remark, we gather some basic facts\daniel{Please verify these} concerning the graph $\sprout_p(A)$.
 \begin{enumerate} 
-\item The set $\graph_p(A)$ of very small $A$-pairs is independent of $p$, and may infinite, depending on the geometry of the Newton polyhedron of $A$.  
+\item The set $\graph_p(A)$ of very small $A$-pairs is independent of $p$, and can be infinite, depending on the geometry of the Newton polyhedron of $A$.  
 
 \item \label{elementary1 small pairs} \Cref{p-sprout: R} tells us that every vertex of $\sprout_p(A)$ is a small monomial pair.  Furthermore, if $(B,\vv{v})$ is a vertex of $\sprout_p(A)$, then $B$ must be among the finitely many descendants of $A$.
 
@@ -2114,6 +2114,8 @@ Suppose $(A,\vv{u})$ is very small.  In this remark, we gather some basic facts 
 \item \label{elementary2 small pairs}  It follows from \Cref{elementary1: R}\eqref{elementary1 small pairs} that $\S_{q}(A,\vv{u})$, when non-empty, consists of small pairs whose monomial matrix is among the finitely many descendants of $A$.  Furthermore, $\S_{qp}(A,\vv{u}) = \emptyset$ if and only if $\S_q(A,\vv{u}) = \emptyset$, or $\S_q(A,\vv{u})$ contains a pairs a pair that is not very small, which itself holds if and only if $\S_{q}^{\ast}(A,\vv{u})= \emptyset$.   Furthermore, $\S_q^{\ast}(A,\vv{u})$ is either empty, or contains only very small pairs.
 
 \item \label{elementary2 periodic in e} Arguing as in \Cref{elementary1: R}\eqref{elementary1 periodic in e}, we see that both $\cup_{e=1}^{\infty} \S_{p^e}(A,\vv{u})$ and  $\cup_{e=1}^{\infty} \S^{\ast}_{p^e}(A,\vv{u})$ are finite, and that each of the sets $\S_{p^e}(A,\vv{u})$ and $\S^{\ast}_{p^e}(A,\vv{u})$ are eventually periodic in $e$.
+
+\emily[inline]{What can we say when $p\equiv 1 \bmod d$?}
 
 \item \label{elementary2 periodic in p} Similarly, arguing as in \Cref{elementary1: R}\eqref{elementary1 periodic in p}, we see that the graph $\sprout_p^{\ast}(A,\vv{u})$ depends only on $p$ modulo any universal denominator $\ell$ for $A$.
 \end{enumerate}
