Un-commented out a line

--- a/aip.tex
+++ b/aip.tex
@@ -1550,7 +1550,7 @@ We record another application of universal denominators below.
 \label{uniform uniform value and image: T}
 Given a monomial matrix $A$, there exists an integer $\beta = \beta(A)$ with the following property\textup:
 If $q > \beta$ and $(A, \vv{u})$ is a monomial pair, then
-% \[  \deficit \IP(A, \vv{u}, q) = \udeficit(A, \vv{u}, q) \]
+\[  \deficit \IP(A, \vv{u}, q) = \udeficit(A, \vv{u}, q) \]
 and
 \[  \ol{ \short \IP(A, \vv{u}, q)} = \ushort (A, \vv{u}, q).\] 
 \end{theorem}
